[package]
name = "r2d2"
version = "0.8.2"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A generic connection pool"
repository = "https://github.com/sfackler/r2d2"
readme = "README.md"
keywords = ["database", "pool"]

[dependencies]
may = { git = "https://github.com/Xudong-Huang/may.git" }
log = "0.4"
